# docker-aws-scheduler-stop-start

./: .dockerignore  .gitignore  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  push.yml
scheduler/: Cargo.toml
scheduler/src/: apprunner.rs  autoscaling.rs  cloudwatch.rs  config.rs  documentdb.rs  ec2.rs  ecs.rs  filter_resources_by_tags.rs  main.rs  rds.rs  redshift.rs  transfer.rs
tests/e2e/: run_e2e.sh
tests/e2e/terraform/: main.tf  outputs.tf  variables.tf  vpc.tf
