[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1"
aws-sdk-resourcegroupstagging = "1"
aws-sdk-autoscaling = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-docdb = "1"
aws-sdk-ecs = "1"
aws-sdk-rds = "1"
aws-sdk-redshift = "1"
aws-sdk-transfer = "1"
aws-sdk-apprunner = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
anyhow = "1"
